Fix all menus, commands, and most bugs